<resources>
    <string name="app_name">SimpleTracker</string>
    <string name="tab_item_runs_name">Runs</string>
    <string name="tab_item_trackers_name">Trackers</string>
    <string name="tab_item_record_name">Record</string>
    <string name="static_dist_traveled_text">Distance Traveled</string>
    <string name="static_avg_speed_text">Average Speed</string>
    <string name="static_top_speed_text">Top Speed</string>
    <string name="static_tracker_select_text">Select</string>
    <string name="static_tracker_text">Tracker</string>
    <string name="var_dist_traveled">0000</string>
    <string name="var_avg_speed">0000</string>
    <string name="var_top_speed">0000</string>
    <string name="split_time">0000</string>
    <string name="tracker">--------</string>
    <string name="dist_unit">unit</string>
    <string name="record_start_button_text">Start</string>
    <string name="record_stop_button_text">Stop</string>
    <string name="units_preference_text">Enable or disable metric units</string>
    <string name="settings_buton_text">Settings</string>
    <string name="units_preference_title">Enable metric units</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
